<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Activity &amp; Data Storage Sample</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="credit_card">Credit Card #</string>
    <string name="process_data_button">Process</string>
    <string name="save_button">Save</string>
    <string name="report_button">Report</string>
    <string name="close_button">Close</string>
    <string name="processing_string">Processing data..</string>
    <string name="result">Result</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="complete_process">Complete Process</string>
    <string name="sqlite">SQLite</string>
    <string name="preferences">Preferences</string>

</resources>
